# cavez

./: .clang-format  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: sandbox_main.cpp
res/: CMakeLists.txt  res_path.hpp.in
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/src/: sandbox_main.cpp
src/assets/: CMakeLists.txt
src/assets/include/assets/: assets_interface.hpp  color.hpp  image.hpp  image_loader.hpp  texture_id.hpp  texture_manager_interface.hpp
src/assets/src/: assets_impl.cpp  assets_impl.hpp  color.cpp  image.cpp  image_loader.cpp  texture_manager_impl.cpp  texture_manager_impl.hpp
src/game/: CMakeLists.txt
src/game/include/game/: game_interface.hpp  game_state.hpp  game_state_interface.hpp
src/game/src/: game_impl.cpp  game_impl.hpp  game_state.cpp  game_state.hpp  game_state_impl.cpp  game_state_impl.hpp
src/game/src/camera/: camera.cpp  camera.hpp  cameras.hpp
src/game/src/components/: component_container.cpp  component_container.hpp  component_id.hpp  physics_component.hpp
src/game/src/ec/: component_container.hpp  component_id.hpp  entity.cpp  entity.hpp  entity_container.cpp  entity_container.hpp  entity_factory.cpp  entity_factory.hpp
src/game/src/ec/components/: camera_follow_component.hpp  collider_component.hpp  input_component.hpp  physics_component.hpp  render_component.hpp  rotation_component.hpp  terrain_collider_component.hpp  throttle_component.hpp
src/game/src/ec/static_array/: static_array.hpp
src/game/src/entity/: entity.hpp  entity_container.hpp
src/game/src/events/: event_queue.hpp
src/game/src/level/: environment_mapping.cpp  environment_mapping.hpp  environment_types.hpp  level.cpp  level.hpp  level_builder.cpp  level_builder.hpp
src/game/src/systems/: camera_follow_system.cpp  camera_follow_system.hpp  collider_update_system.cpp  collider_update_system.hpp  input_system.cpp  input_system.hpp  physics_system.cpp  physics_system.hpp  render_system.cpp  render_system.hpp  rotation_system.cpp  rotation_system.hpp  system_manager.cpp  system_manager.hpp  terrain_collision_detect_system.cpp  terrain_collision_detect_system.hpp  throttle_system.cpp  throttle_system.hpp
src/hud/: CMakeLists.txt
src/hud/include/hud/: hud_interface.hpp
src/hud/src/: hud_impl.cpp  hud_impl.hpp
src/input/: CMakeLists.txt
src/input/include/input/: input_id.hpp  input_interface.hpp  input_key.hpp  input_mapping.hpp  input_state.hpp
src/input/src/: input_impl.cpp  input_impl.hpp
src/logger/: CMakeLists.txt
src/logger/include/logger/: logger.hpp  output_interface.hpp
src/logger/src/: console_output.cpp  console_output.hpp  logger.cpp
src/math/: CMakeLists.txt
src/math/include/math/: angle_utils.hpp  bounding_box.hpp  bresenham.hpp  rect.hpp  vector.hpp
src/math/src/: angle_utils.cpp  bresenham.cpp  vector.cpp
src/menu/: CMakeLists.txt
src/menu/include/menu/: menu_interface.hpp
src/menu/src/: menu_impl.cpp  menu_impl.hpp
src/messaging/: CMakeLists.txt
src/messaging/include/messaging/: messaging_interface.hpp
src/messaging/src/: messaging_impl.cpp  messaging_impl.hpp
src/rendering/: CMakeLists.txt
src/rendering/include/rendering/: render_items.hpp  rendering_interface.hpp  rendering_target.hpp
src/rendering/src/: image_renderer.cpp  image_renderer.hpp  rendering_impl.cpp  rendering_impl.hpp
test/: CMakeLists.txt
test/googletest-download/: CMakeLists.txt
